--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,8 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 
     /** Emojis */
-    implementation("com.android.support:support-emoji:28.0.0")
+    implementation("androidx.emoji:emoji:1.1.0")
+
+    /** Navigation Compose */
+    implementation("androidx.navigation:navigation-compose:2.4.0-alpha04")
 }
